# ThumbyCraft

./: .gitignore  README.md  ThumbyCraft-debug.apk  firmware_thumbycraft.uf2
android/: README.md
android/app/: build.gradle
android/app/jni/src/: Android.mk  android_main.c
android/app/src/main/res/values/: strings.xml
device/: CMakeLists.txt  craft_audio_pwm.c  craft_chunk_store_fatfs.c  craft_chunk_store_flash.c  craft_device_main.c  craft_link_usb.c  craft_save_fatfs.c  craft_save_flash.c  craft_save_flash.h  tusb_config.h
docs/: ROADMAP.md  THUMBYONE_INTEGRATION.md
funkey/: README.md  craft_chunk_store_posix.c  funkey_main.c  package-opk.sh
host/: CMakeLists.txt  craft_atlas.c  craft_blossom.c  craft_chunk_store_stub.c  craft_grass.c  craft_greens.c  craft_leaves.c  craft_link_socket.c  craft_profile.c  craft_shot.c  host_main.c  package_linux.sh  redstone_test.c  render_bench.c  stream_verify.c
src/: craft_audio.c  craft_audio.h  craft_audio_cdl_data.h  craft_blocks.c  craft_blocks.h  craft_chests.c  craft_chests.h  craft_chunk_store.h  craft_drops.c  craft_drops.h  craft_font.c  craft_font.h  craft_furnace.c  craft_furnace.h  craft_gen.c  craft_gen.h  craft_hud.c  craft_hud.h  craft_lava.c  craft_link.h  craft_main.c  craft_main.h  craft_menu.c  craft_menu.h  craft_mobs.c  craft_mobs.h  craft_net.c  craft_net.h  craft_particles.c  craft_particles.h  craft_player.c  craft_player.h  craft_redstone.c  craft_redstone.h  craft_render.c  craft_render.h  craft_save.c  craft_save.h  craft_title.c  craft_title.h  (+7 more)
tools/: CMakeLists.txt  bake_textures.c  cdl_to_c.py
